[gd_scene load_steps=27 format=3 uid="uid://ctguuxm3j6gq4"]

[ext_resource type="Script" path="res://Scripts/settings.gd" id="1_hsa0c"]
[ext_resource type="Texture2D" uid="uid://dhghk623kxnqt" path="res://Sprites/settings.png" id="1_jw4u7"]
[ext_resource type="FontFile" uid="uid://bj0sypkfjqyly" path="res://Fonts/DTM-Sans.otf" id="2_ds4j7"]
[ext_resource type="Texture2D" uid="uid://8vmiupn24xaj" path="res://Gimp/snowflakes/snowflake_1.png" id="4_jjdne"]
[ext_resource type="Texture2D" uid="uid://dnlyn62or40v4" path="res://Gimp/snowflakes/snowflake_2.png" id="5_7yp8d"]
[ext_resource type="Texture2D" uid="uid://caxnoma4rv1s8" path="res://Gimp/snowflakes/snowflake_3.png" id="6_jaej0"]
[ext_resource type="Texture2D" uid="uid://bdkdr1yifj6tw" path="res://Gimp/snowflakes/snowflake_4.png" id="7_0gn46"]
[ext_resource type="Texture2D" uid="uid://cmlvryahtfyvh" path="res://Gimp/snowflakes/snowflake_5.png" id="8_jlwk5"]
[ext_resource type="Texture2D" uid="uid://cim8pjdyjelbm" path="res://Sprites/sun_core.png" id="9_tynqg"]
[ext_resource type="Texture2D" uid="uid://hdbwbppesvdp" path="res://Sprites/sun_halo.png" id="10_cjbfh"]
[ext_resource type="Texture2D" uid="uid://ccg3xyakj73p3" path="res://Sprites/withered_leaf.png" id="10_tu2q7"]
[ext_resource type="Texture2D" uid="uid://m2go5b1bb5yg" path="res://Sprites/leaf.png" id="11_5vjvu"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_5bole"]
emission_shape = 3
emission_box_extents = Vector3(500, 250, 1)
particle_flag_disable_z = true
direction = Vector3(1, 1, 0)
gravity = Vector3(98, 98, 0)
initial_velocity_max = 1000.0
angular_velocity_min = 45.0
angular_velocity_max = 90.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_max = 2.0

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_et1ng"]
emission_shape = 3
emission_box_extents = Vector3(500, 250, 1)
particle_flag_disable_z = true
direction = Vector3(0, 0, 0)
gravity = Vector3(98, 98, 0)
initial_velocity_max = 1000.0
angular_velocity_min = 45.0
angular_velocity_max = 90.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_max = 2.0

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_nhluv"]
emission_shape = 3
emission_box_extents = Vector3(500, 250, 1)
particle_flag_disable_z = true
direction = Vector3(0, 0, 0)
gravity = Vector3(98, 98, 0)
initial_velocity_max = 1000.0
angular_velocity_min = 45.0
angular_velocity_max = 90.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_min = 2.0
scale_max = 3.0

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_bspti"]
emission_shape = 3
emission_box_extents = Vector3(500, 250, 1)
particle_flag_disable_z = true
direction = Vector3(0, 0, 0)
gravity = Vector3(98, 98, 0)
initial_velocity_max = 1000.0
angular_velocity_min = 45.0
angular_velocity_max = 90.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_min = 2.0
scale_max = 3.0

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_mwvvq"]
emission_shape = 3
emission_box_extents = Vector3(500, 250, 1)
particle_flag_disable_z = true
direction = Vector3(0, 0, 0)
gravity = Vector3(98, 98, 0)
initial_velocity_max = 1000.0
angular_velocity_min = 45.0
angular_velocity_max = 90.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_min = 2.0
scale_max = 3.0

[sub_resource type="Animation" id="Animation_p7hov"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Core:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Core:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Halo:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Halo:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_0s6hu"]
resource_name = "sun"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Core:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.9, 0.9), Vector2(1.05, 1.05), Vector2(0.9, 0.9), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Core:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6, 1.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-0.0872665, 0.0872665, -0.0872665]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Halo:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.9, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.9, 0.9), Vector2(1.2, 1.2), Vector2(1.1, 1.1), Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Halo:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.6, 1.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.174533, -0.174533, 0.174533]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5waec"]
_data = {
"RESET": SubResource("Animation_p7hov"),
"sun": SubResource("Animation_0s6hu")
}

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_botoq"]
emission_shape = 3
emission_box_extents = Vector3(600, 1, 1)
particle_flag_disable_z = true
gravity = Vector3(49, 98, 0)
angular_velocity_min = -90.0
angular_velocity_max = 90.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_min = 5.0
scale_max = 10.0
color = Color(1, 0.588235, 0.588235, 0.588235)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_offek"]
emission_shape = 3
emission_box_extents = Vector3(600, 1, 1)
particle_flag_disable_z = true
gravity = Vector3(49, 98, 0)
angular_velocity_min = -90.0
angular_velocity_max = 90.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_min = 5.0
scale_max = 10.0
color = Color(1, 0.733333, 0.533333, 0.27451)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_wdxfr"]
emission_shape = 3
emission_box_extents = Vector3(600, 1, 1)
particle_flag_disable_z = true
gravity = Vector3(49, 98, 0)
angular_velocity_min = -90.0
angular_velocity_max = 90.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
color = Color(1, 1, 1, 0.196078)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_dhlrg"]
emission_shape = 3
emission_box_extents = Vector3(600, 1, 1)
particle_flag_disable_z = true
gravity = Vector3(49, 98, 0)
angular_velocity_min = -90.0
angular_velocity_max = 90.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_min = 2.0
scale_max = 2.0
color = Color(1, 1, 1, 0.431373)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_s186o"]
emission_shape = 3
emission_box_extents = Vector3(600, 1, 1)
particle_flag_disable_z = true
gravity = Vector3(49, 98, 0)
angular_velocity_min = -90.0
angular_velocity_max = 90.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_min = 4.0
scale_max = 4.0
color = Color(1, 1, 1, 0.666667)

[sub_resource type="FontVariation" id="FontVariation_kfvv7"]
base_font = ExtResource("2_ds4j7")
spacing_glyph = 1

[node name="Settings" type="Control"]
texture_filter = 1
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0

[node name="Reference" type="Sprite2D" parent="."]
visible = false
position = Vector2(576, 324)
scale = Vector2(0.843338, 0.84375)
texture = ExtResource("1_jw4u7")

[node name="Snowflakes" type="Node2D" parent="."]
visible = false

[node name="SnowflakeParticles1" type="GPUParticles2D" parent="Snowflakes"]
position = Vector2(104, 168)
amount = 10
process_material = SubResource("ParticleProcessMaterial_5bole")
texture = ExtResource("4_jjdne")
lifetime = 1.5
randomness = 1.0

[node name="SnowflakeParticles2" type="GPUParticles2D" parent="Snowflakes"]
position = Vector2(104, 168)
amount = 10
process_material = SubResource("ParticleProcessMaterial_et1ng")
texture = ExtResource("5_7yp8d")
lifetime = 1.5

[node name="SnowflakeParticles3" type="GPUParticles2D" parent="Snowflakes"]
position = Vector2(104, 168)
amount = 10
process_material = SubResource("ParticleProcessMaterial_nhluv")
texture = ExtResource("6_jaej0")
lifetime = 1.5

[node name="SnowflakeParticles4" type="GPUParticles2D" parent="Snowflakes"]
position = Vector2(104, 168)
amount = 10
process_material = SubResource("ParticleProcessMaterial_bspti")
texture = ExtResource("7_0gn46")
lifetime = 1.5

[node name="SnowflakeParticles5" type="GPUParticles2D" parent="Snowflakes"]
position = Vector2(104, 168)
amount = 10
process_material = SubResource("ParticleProcessMaterial_mwvvq")
texture = ExtResource("8_jlwk5")
lifetime = 1.5

[node name="SunOrigin" type="Node2D" parent="."]
visible = false
position = Vector2(960, 128)
metadata/_edit_group_ = true

[node name="Sun" type="Node2D" parent="SunOrigin"]
position = Vector2(0, 16)
scale = Vector2(7, 7)

[node name="Core" type="Sprite2D" parent="SunOrigin/Sun"]
texture = ExtResource("9_tynqg")

[node name="Halo" type="Sprite2D" parent="SunOrigin/Sun"]
texture = ExtResource("10_cjbfh")

[node name="AnimationPlayer" type="AnimationPlayer" parent="SunOrigin/Sun"]
autoplay = "sun"
libraries = {
"": SubResource("AnimationLibrary_5waec")
}

[node name="Leaves" type="Node2D" parent="."]
visible = false

[node name="FlowerParticles" type="GPUParticles2D" parent="Leaves"]
position = Vector2(448, 0)
amount = 70
process_material = SubResource("ParticleProcessMaterial_botoq")
lifetime = 3.7
speed_scale = 0.5

[node name="LeavesParticles1" type="GPUParticles2D" parent="Leaves"]
position = Vector2(448, 0)
amount = 30
process_material = SubResource("ParticleProcessMaterial_offek")
lifetime = 3.7
speed_scale = 1.3

[node name="LeavesParticles2" type="GPUParticles2D" parent="Leaves"]
position = Vector2(448, 0)
amount = 30
process_material = SubResource("ParticleProcessMaterial_wdxfr")
texture = ExtResource("11_5vjvu")
lifetime = 3.7

[node name="LeavesParticles3" type="GPUParticles2D" parent="Leaves"]
position = Vector2(448, 0)
amount = 20
process_material = SubResource("ParticleProcessMaterial_dhlrg")
texture = ExtResource("11_5vjvu")
lifetime = 3.7
speed_scale = 0.7

[node name="LeavesParticles4" type="GPUParticles2D" parent="Leaves"]
position = Vector2(448, 0)
amount = 2
process_material = SubResource("ParticleProcessMaterial_s186o")
texture = ExtResource("11_5vjvu")
lifetime = 4.0
speed_scale = 0.5

[node name="WitheredLeaves" type="Node2D" parent="."]
visible = false

[node name="WitheredLeavesParticles1" type="GPUParticles2D" parent="WitheredLeaves"]
position = Vector2(448, 0)
amount = 30
process_material = SubResource("ParticleProcessMaterial_offek")
lifetime = 3.7
speed_scale = 1.3

[node name="WitheredLeavesParticles2" type="GPUParticles2D" parent="WitheredLeaves"]
position = Vector2(448, 0)
amount = 30
process_material = SubResource("ParticleProcessMaterial_wdxfr")
texture = ExtResource("10_tu2q7")
lifetime = 3.7

[node name="WitheredLeavesParticles3" type="GPUParticles2D" parent="WitheredLeaves"]
position = Vector2(448, 0)
amount = 20
process_material = SubResource("ParticleProcessMaterial_dhlrg")
texture = ExtResource("10_tu2q7")
lifetime = 3.7
speed_scale = 0.7

[node name="WitheredLeavesParticles4" type="GPUParticles2D" parent="WitheredLeaves"]
position = Vector2(448, 0)
amount = 2
process_material = SubResource("ParticleProcessMaterial_s186o")
texture = ExtResource("10_tu2q7")
lifetime = 4.0
speed_scale = 0.5

[node name="Title" type="Label" parent="."]
layout_mode = 0
offset_left = 425.0
offset_top = 27.0
offset_right = 728.0
offset_bottom = 115.0
theme_override_fonts/font = SubResource("FontVariation_kfvv7")
theme_override_font_sizes/font_size = 70
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Options" type="Node2D" parent="."]
script = ExtResource("1_hsa0c")

[node name="Exit" type="Label" parent="Options"]
offset_left = 198.0
offset_top = 106.0
offset_right = 274.0
offset_bottom = 154.0
theme_override_fonts/font = ExtResource("2_ds4j7")
theme_override_font_sizes/font_size = 36
text = "Exit"
vertical_alignment = 1
uppercase = true

[node name="Language" type="Label" parent="Options"]
offset_left = 198.0
offset_top = 187.0
offset_right = 350.0
offset_bottom = 235.0
theme_override_fonts/font = ExtResource("2_ds4j7")
theme_override_font_sizes/font_size = 36
text = "Language"
vertical_alignment = 1
uppercase = true

[node name="Language" type="Label" parent="Options/Language"]
layout_mode = 0
offset_left = 194.0
offset_right = 327.0
offset_bottom = 48.0
theme_override_fonts/font = ExtResource("2_ds4j7")
theme_override_font_sizes/font_size = 36
text = "English"
vertical_alignment = 1
uppercase = true

[node name="BackgroundMusicPlayer" type="AudioStreamPlayer" parent="."]
